--- a/ROOT/WebContent/index.html
+++ b/ROOT/WebContent/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<script>
-		window.location.href = "/login.jsp";
+		window.location.href = "main.jsp";
 	</script>
 </body>
 </html>
